--- a/.travis.yml
+++ b/.travis.yml
@@ -13,6 +13,7 @@ install:
     - pip install .
 
 script:
+    - ls /home/travis/build/AGrigis/pylogparser/pylogparser/demo
     - python setup.py nosetests
     - pep8 . --ignore="E121,E123,E126,E226,E24,E704,E402"
 
